# unimrcp-1.6

./: .gitignore  CMakeLists.txt  README  configure.ac  unimrcp-2010.sln  unimrcp.sln
conf/: .unimrcpserver.xml.swp  unimrcpserver.xml
libs/mpf/src/: mpf_activity_detector.c
plugins/: Makefile.am
plugins/alicloud-recog/: CMakeLists.txt  Makefile.am  alicloudrecog.vcproj  alicloudrecog.vcxproj  alicloudrecog.vcxproj.filters
plugins/alicloud-recog/src/: alicloud_recog_engine.c
plugins/alicloud-synth/: CMakeLists.txt  Makefile.am  alicloudsynth.vcproj  alicloudsynth.vcxproj  alicloudsynth.vcxproj.filters
plugins/alicloud-synth/src/: alicloud_synth_engine.c
plugins/xfyun-recog/: CMakeLists.txt  Makefile.am  xfyunrecog.vcproj  xfyunrecog.vcxproj  xfyunrecog.vcxproj.filters
plugins/xfyun-recog/src/: xfyun_recog_engine.c
plugins/xfyun-synth/: CMakeLists.txt  Makefile.am  xfyunsynth.vcproj  xfyunsynth.vcxproj  xfyunsynth.vcxproj.filters
plugins/xfyun-synth/src/: xfyun_synth_engine.c
