MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

if DEMOSYNTH_PLUGIN
SUBDIRS               += demo-synth
endif

if DEMORECOG_PLUGIN
SUBDIRS               += demo-recog
endif

if ALICLOUDSYNTH_PLUGIN
SUBDIRS               += alicloud-synth
endif

if DEMORECOG_PLUGIN
SUBDIRS               += alicloud-recog
endif

if DEMOVERIFIER_PLUGIN
SUBDIRS               += demo-verifier
endif

if RECORDER_PLUGIN
SUBDIRS               += mrcp-recorder
endif
